1998-03-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS: New file.


1998-03-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI: Version 1.1.0 (Nonoichi) was released.

1998-03-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-pgp.el (mime-method-to-verify-application/pgp-signature):
	Abolish unused local-variable `raw-buf'.

	* mime-play.el (mime-raw-play-entity): fixed.

	* mime-view.el (mime-preview-original-window-configuration): Use
	`defvar' to avoid warning of byte-compiler.

	* mime-view.el (mime-view-display-entity): Don't use
	`mime-view-entity-button-function' (abolish it); use
	`mime-root-entity-p'.

1998-03-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el (mime-view-entity-button-visible-p): New function.
	(mime-view-entity-button-function): Use function
 	`mime-view-entity-button-visible-p'.

	* mime-view.el (mime-raw-entity-parent): New function.
	(mime-view-entity-button-function): Use `mime-raw-entity-parent'.

	* mime-view.el (mime-view-entity-button-function): Use
 	`mime-root-entity-p'.

	* mime-parse.el (mime-root-entity-p): New function.

1998-03-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI-CFG: Insert version check code.

1998-03-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-image.el: Set up `mime-view-body-visible-condition' instead
 	of `mime-view-visible-media-type-list'.

	* mime-view.el (mime-view-body-visible-condition): New variable.
	(mime-view-body-visible-p): Use `mime-view-body-visible-condition'
 	instead of `mime-view-visible-media-type-list'.  	
	Abolish `mime-view-visible-media-type-list'.

	* mime-parse.el (mime-type/subtype-string): New function.
	(mime-entity-type/subtype): Use `mime-type/subtype-string'.

1998-03-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-pgp.el (mime-method-to-verify-application/pgp-signature):
	Use `mime-raw-write-region'.

	* mime-view.el (mime-raw-buffer-coding-system-alist): Move setting
	for mh-show-mode.

	* mime-play.el, mime-view.el: Rename