@@ -1,3 +1,11 @@
+1998-03-19  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* eword-decode.el (eword-decode-region): Treat undecodable
+	encoded-words.
+	(eword-decode-before-ewords-regexp): New variable.
+	(eword-decode-between-ewords-regexp): New variable.
+	(eword-decode-after-ewords-regexp): New variable.
+
 1998-03-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* NEWS: New file.
